# Argus1

./: .dockerignore  .gitignore  ARGUS_FRONTEND_SPEC.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.workspace  LICENSE  MISSION.md  README.md  SECURITY.md  SOUL.md  argus-down.sh  argus-reload.sh  argus-up.sh  docker-compose.yml  workspace-init.sh  workspace_exec_server.py
argus-cli/: Cargo.toml
argus-cli/src/: main.rs
argus-core/: Cargo.toml
argus-core/src/: agent.rs  context.rs  lib.rs  llm.rs
argus-crypto/: Cargo.toml
argus-crypto/src/: envelope.rs  keys.rs  lib.rs  vault.rs
argus-memory/: Cargo.toml
argus-memory/src/: lib.rs  memory.rs  store.rs
argus-nexus/: VISION.md  package-lock.json  package.json
argus-nexus/app/: globals.css  layout.tsx  page.tsx
argus-nexus/app/hooks/: useAgentState.ts  useWebSocket.ts
argus-nexus/app/lib/: artifacts.ts  connection.ts  constants.ts  types.ts
argus-sandbox/: Cargo.toml
argus-sandbox/src/: capabilities.rs  lib.rs  runtime.rs
crates/argus-audit/: Cargo.toml
crates/argus-audit/src/: chain.rs  entry.rs  lib.rs  signer.rs
crates/argus-cli/: Cargo.toml
crates/argus-cli/src/: checkin.rs  discord.rs  main.rs  mcp.rs  memory.rs  sentry.rs  telegram.rs  triage_loop.rs  tui.rs  web.rs
crates/argus-core/: Cargo.toml
crates/argus-core/src/: agent.rs  constraints.rs  context.rs  embedding.rs  lib.rs  mcp.rs  sentry_bus.rs  shell.rs  skills.rs  supabase.rs  tools.rs  triage.rs
crates/argus-crypto/: Cargo.toml
crates/argus-crypto/src/: cipher.rs  keychain.rs  lib.rs  pq.rs  vault.rs
crates/argus-memory/: Cargo.toml
crates/argus-memory/src/: encrypted.rs  lib.rs  sqlite.rs  supabase.rs
crates/argus-missions/: Cargo.toml
crates/argus-missions/src/: bridge.rs  executor.rs  lib.rs  runner.rs  tools.rs  types.rs
crates/argus-sandbox/: Cargo.toml
crates/argus-sandbox/src/: capabilities.rs  lib.rs  wasm.rs
docs/: AGENT_DISCOURSE.md  COUNCIL_MODE.md  DISCORD_MIGRATION.sql  EMBEDDING_ARCHITECTURE.md  IDENTITY_GOVERNANCE.md  MODEL_ROSTER_NOTE.md  PROJECT_DELTA.md  SECURITY_AUDIT_LOG.md  SEMANTIC_MEMORY_MIGRATION.sql
frontend/: .env.local.example  .gitignore  Dockerfile.frontend  README.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/sentry/: route.ts
frontend/app/api/ws-token/: route.ts
frontend/components/artifacts/: ArtifactPanel.tsx
frontend/components/builder/: BuilderQuickBar.tsx  BuilderStation.tsx
frontend/components/calendar/: DayBubble.tsx  MiniCalendar.tsx
frontend/components/conversation/: ArgusMessage.tsx  ConversationDrawer.tsx  ConversationHistory.tsx  ConversationPanel.tsx  InputArea.tsx  MessageList.tsx  ToolCallBlock.tsx  UserMessage.tsx
frontend/components/council/: CouncilHub.tsx
frontend/components/eyes/: EyesPanel.tsx  NexusCore.tsx  NexusSignalStrip.tsx  SystemInfo.tsx  ToolStatus.tsx  VaultStatus.tsx
frontend/components/header/: ArgusEye.tsx  ConnectionStatus.tsx  Header.tsx  ModelSelector.tsx  SentryDropdown.tsx
frontend/components/mind/: ActivityFeed.tsx  BreakthroughMoments.tsx  CuriosityLog.tsx  ExecutionFlow.tsx  InnerTruth.tsx  MemoryList.tsx  MindPanel.tsx  MissionPanel.tsx  PartnershipDynamics.tsx  ScheduleChronicle.tsx  SemanticField.tsx  SkillsList.tsx
frontend/components/panes/: ChatPane.tsx  PaneModelSelector.tsx
frontend/components/scheduler/: TaskScheduler.tsx
frontend/components/shared/: CollapsibleSection.tsx  CommandPalette.tsx  EyeStateIndicator.tsx  StarfieldBackground.tsx  TierBadge.tsx
frontend/hooks/: useAccessTier.ts  useAgentState.ts  useWebSocket.ts
frontend/lib/: artifacts.ts  builder.ts  connection.ts  constants.ts  meeting-briefs.ts  models.ts  types.ts  ws-options.ts
frontend/lib/dev/: mock-connection.ts
grok-argus-frontend/: README.md  package-lock.json  package.json  tailwind.config.ts
grok-argus-frontend/app/: globals.css  layout.tsx  page.tsx
grok-argus-frontend/app/components/artifacts/: ArtifactPanel.tsx
grok-argus-frontend/app/components/conversation/: ArgusMessage.tsx  ConversationDrawer.tsx  ConversationPanel.tsx  InputArea.tsx  MessageList.tsx  ToolCallBlock.tsx  UserMessage.tsx
grok-argus-frontend/app/components/eyes/: EyesPanel.tsx  SystemInfo.tsx  ToolStatus.tsx  VaultStatus.tsx
grok-argus-frontend/app/components/header/: ArgusEye.tsx  ConnectionStatus.tsx  Header.tsx  ModelSelector.tsx  SentryDropdown.tsx
grok-argus-frontend/app/components/mind/: ActivityFeed.tsx  BreakthroughMoments.tsx  CuriosityLog.tsx  InnerTruth.tsx  MemoryList.tsx  MindPanel.tsx  PartnershipDynamics.tsx  SkillsList.tsx
grok-argus-frontend/app/components/panes/: ChatPane.tsx  PaneModelSelector.tsx
grok-argus-frontend/app/components/scheduler/: TaskScheduler.tsx
grok-argus-frontend/app/components/shared/: CollapsibleSection.tsx  CommandPalette.tsx  EyeStateIndicator.tsx  TierBadge.tsx
grok-argus-frontend/app/components/watchtower/: Watchtower.tsx
grok-argus-frontend/app/hooks/: useAccessTier.ts  useAgentState.ts  useWebSocket.ts
grok-argus-frontend/app/lib/: artifacts.ts  connection.ts  constants.ts  models.ts  types.ts
migrations/: 003_triage_tables.sql  007_argus_missions.sql  008_argus_active_constraints.sql
prompts/: gemini.md  grok-build.md  grok-multi.md  grok.md  haiku.md  nemotron.md  opus.md  sentry.md  sonnet.md
scripts/: argus-banner.sh  argus-rebuild-watcher.sh  com.argus.rebuild-watcher.plist  ghidra-up.sh  memory.py  vault-export.sh
