[workspace]
resolver = "2"
members = [
    "argus-core",
    "argus-crypto",
    "argus-sandbox",
    "argus-memory",
    "argus-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/burtonstuff/argus"
authors = ["Burton <bradlee@proton.me>"]

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Post-quantum crypto
pqcrypto-mlkem = "0.1"
pqcrypto-mldsa = "0.1"

# Standard crypto (for hybrid schemes)
ring = "0.17"
chacha20poly1305 = "0.10"

# WebAssembly sandbox
wasmtime = "28"

# CLI
clap = { version = "4", features = ["derive"] }

# TUI (optional)
ratatui = "0.29"
crossterm = "0.28"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "uuid"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# Keychain integration
keyring = "3"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
