[package]
name = "argus-cli"
description = "Command-line interface for Argus"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
argus-core = { path = "../argus-core" }
argus-crypto = { path = "../argus-crypto" }
argus-memory = { path = "../argus-memory" }

tokio.workspace = true
clap.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
anyhow.workspace = true
