[package]
name = "argus-core"
description = "Core orchestration for Argus agent runtime"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argus-crypto = { path = "../argus-crypto" }
argus-sandbox = { path = "../argus-sandbox" }
argus-memory = { path = "../argus-memory" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
reqwest.workspace = true
thiserror.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true
