[package]
name = "argus-crypto"
description = "Post-quantum cryptography layer for Argus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Post-quantum
pqcrypto-mlkem.workspace = true
pqcrypto-mldsa.workspace = true

# Symmetric encryption
chacha20poly1305.workspace = true
ring.workspace = true

# Keychain
keyring.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Error handling
thiserror.workspace = true

# Random
rand = "0.8"

# Zeroize secrets on drop
zeroize = { version = "1", features = ["derive"] }
