[package]
name = "argus-memory"
description = "Encrypted persistent memory for Argus agents"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
argus-crypto = { path = "../argus-crypto" }

tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
uuid.workspace = true
chrono.workspace = true
tracing.workspace = true
