[package]
name = "argus-sandbox"
description = "WebAssembly sandbox for secure tool execution"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
wasmtime.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
