[package]
name = "argus-audit"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
rusqlite = { version = "0.31", features = ["bundled"] }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
