[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "argus"
path = "src/main.rs"

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dirs = "5.0"
argus-crypto = { path = "../argus-crypto" }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.12", features = ["macros"] }
