[package]
name = "argus-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "argus"
path = "src/main.rs"

[features]
# Enable full Discord bot support (adds serenity runtime).
# Build with: cargo build --release --features discord
discord = ["serenity"]

[dependencies]
tokio = { workspace = true, features = ["full"] }
clap.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
serde_json.workspace = true
ratatui.workspace = true
crossterm.workspace = true
dirs = "5.0"
uuid = { workspace = true }
argus-crypto = { path = "../argus-crypto" }
argus-core = { path = "../argus-core" }
argus-memory = { path = "../argus-memory" }
argus-audit = { path = "../argus-audit" }
urlencoding = "2.1"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
teloxide = { version = "0.12", features = ["macros", "rustls", "ctrlc_handler"], default-features = false }
axum = { version = "0.7", features = ["ws", "json"] }
tower-http = { version = "0.5", features = ["cors"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
tracing.workspace = true
tracing-subscriber.workspace = true
# Discord intranet bot — enabled via `--features discord`
serenity = { version = "0.12", optional = true, default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
