[package]
name = "argus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Core orchestration for Argus agent runtime"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

argus-crypto = { path = "../argus-crypto" }
argus-memory = { path = "../argus-memory" }
argus-sandbox = { path = "../argus-sandbox" }
