[package]
name = "argus-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
reqwest = { workspace = true, features = ["json"] }
urlencoding = "2.1"
dirs = "5.0"
