[package]
name = "argus-crypto"
version.workspace = true
edition.workspace = true

[dependencies]
thiserror.workspace = true
secrecy.workspace = true
chacha20poly1305.workspace = true
ring.workspace = true
keyring.workspace = true
serde.workspace = true
serde_json.workspace = true
zeroize.workspace = true
