[package]
name = "argus-memory"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Encrypted memory and storage layer for Argus"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
uuid.workspace = true
chrono.workspace = true

# Database
sqlx.workspace = true

# Encryption
chacha20poly1305.workspace = true
secrecy.workspace = true
zeroize.workspace = true

argus-crypto = { path = "../argus-crypto" }
