[package]
name = "argus-memory"
version.workspace = true
edition.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dirs = "5.0"
rusqlite = { version = "0.31", features = ["bundled"] }

argus-core = { path = "../argus-core" }

[dev-dependencies]
tempfile = "3.10"
