[package]
name = "argus-sandbox"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Sandboxed tool execution for Argus"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# WASM runtime
wasmtime.workspace = true
